fix text spacing in button and li

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -629,15 +629,17 @@ small {
 
   .NewsFeedOn a {
     font-size: 2.5vh;
-    line-height: 2vw !important;
+    line-height: 4vw !important;
   }
 
   .NewsFeedOn p {
-    font-size: 1.75vh;
+    font-size: 2vh;
+    line-height: 2.3vw !important;
   }
 
   .NewsFeedOn small {
-    font-size: 1.5vh;
+    font-size: 2vh;
+    line-height: 2vw !important;
   }
   .BDStandard {
     height: 250vh;
@@ -655,7 +657,7 @@ small {
     filter: drop-shadow(0 0 50px #fff);
   }
   button {
-    font-size: 2vh;
+    font-size: 2vw;
     line-height: 3vw;
   }
 
